--- a/Resources/views/Admin/edit.html.twig
+++ b/Resources/views/Admin/edit.html.twig
@@ -13,10 +13,7 @@
 {% endif %}
 <div class="row">
     <div class="large-12 columns">
-        <div class="button-bar">
-            <ul class="button-group radius">
-                <li>{{ helper.action_back_button(path(base_route ~'_index')) }}</li>
-            </ul>
+        <div class="button-bar right">
             {% if delete_form is defined %}
                 <ul class="button-group radius">
                     <li>
@@ -29,16 +26,21 @@
                 </ul>
             {% endif %}
         </div>
-        <hr class="dark" />
-        {% if entity.id %}
-            <h3>{{ ('admin.'~entity_label)|trans }} &#8250; {{ 'admin.edit.title'|trans }} &#8250; <strong>{{ entity }}</strong></h3>
-        {% else %}
-            <h3>{{ ('admin.'~entity_label)|trans }} &#8250; {{ 'admin.new.title'|trans }}</h3>
-        {% endif %}
+        <div class="button-bar">
+            <a href="{{ path(base_route ~'_index') }}" class="t-back left compact round secondary button nav-action-button">
+                <i class="icon-arrow-left"></i>
+            </a>
+            {% if entity.id %}
+                <h4 class="admin-title">{{ ('admin.'~entity_label)|trans }} &#8250; {{ 'admin.edit.title'|trans }} &#8250; <strong>{{ entity }}</strong></h4>
+            {% else %}
+                <h4 class="admin-title">{{ ('admin.'~entity_label)|trans }} &#8250; {{ 'admin.new.title'|trans }}</h4>
+            {% endif %}
+        </div>
+        <hr />
     </div>
 </div>
 <div class="row">
-    <div class="large-8 columns">
+    <div class="large-7 columns">
         <form action="{{ action }}" method="POST" {{ form_enctype(form) }} class="clean-section">
             {% if 'PUT' == method %}<input type="hidden" name="_method" value="PUT" />{% endif %}
             {{ form_rest(form) }}
