--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -7,7 +7,7 @@
             {{ form_label(form) }}
             {{ form_errors(form) }}
             {{ form_widget(form) }}
-            {% if help is not null %}
+            {% if help is defined %}
                 <p class="help">{{ ('admin.'~help)|trans }}</p>
             {% endif %}
         </div>
@@ -52,7 +52,7 @@
         <div class="large-12 columns">
             {{ form_widget(form) }} {{ form_label(form) }}
             {{ form_errors(form) }}
-            {% if help is not null %}
+            {% if help is defined %}
                 <p class="help">{{ ('admin.'~help)|trans }}</p>
             {% endif %}
         </div>
