Add place for extra_actions in list

--- a/Resources/views/Admin/list.html.twig
+++ b/Resources/views/Admin/list.html.twig
@@ -107,6 +107,7 @@
                                 {% endif %}
                             {% endfor %}
                             <td class="text-right">
+                                {% block extra_actions %}{% endblock %}
                                 <a href="{{ path(base_route ~'_edit', { 'id': entity.id }) }}"
                                     class="secondary radius label">
                                     <i class="icon-edit"></i> {{ 'admin.action.edit'|trans }}
