--- a/Resources/views/Admin/list.html.twig
+++ b/Resources/views/Admin/list.html.twig
@@ -119,7 +119,7 @@
             </table>
         {% else %}
             <div class="panel radius">
-                <h5>Ez dago emaitzarik</h5>
+                <h5>{{ 'admin.label.noResults'|trans }}</h5>
             </div>
         {% endif %}
     </div>
