--- a/Resources/assets/scss/admin.scss
+++ b/Resources/assets/scss/admin.scss
@@ -213,7 +213,7 @@ table {
             .title {
                 padding: $quarter-padding 0;
                 border-top: 0; //border-top: 1px dotted $hr-color;
-                margin-top: 0;
+                margin: 0;
                 
                 a {
                     font-size: 1em;
