--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -8,7 +8,7 @@
             {{ form_errors(form) }}
             {{ form_widget(form) }}
             {% if help is defined and help is not null %}
-                <p class="help">{{ ('admin.'~help)|trans }}</p>
+                <p class="form-help">{{ ('admin.'~help)|trans }}</p>
             {% endif %}
         </div>
     </div>
@@ -53,7 +53,7 @@
             {{ form_widget(form) }} {{ form_label(form) }}
             {{ form_errors(form) }}
             {% if help is defined and help is not null %}
-                <p class="help">{{ ('admin.'~help)|trans }}</p>
+                <p class="form-help">{{ ('admin.'~help)|trans }}</p>
             {% endif %}
         </div>
     </div>
