--- a/Resources/views/Admin/list.html.twig
+++ b/Resources/views/Admin/list.html.twig
@@ -101,7 +101,7 @@
                             <td>{{ helper.render_check() }}</td>
                             {% for column in columns %}
                                 {% if values[column] is sameas(true) or values[column] is sameas(false) %}
-                                    <td>{{ values[column] ? '<i class="icon-ok color-success"></i>' : '<i class="icon-remove color-alert"></i>' }}</td>
+                                    <td class="text-center">{{ values[column] ? '<i class="icon-ok color-success"></i>' : '<i class="icon-remove color-alert"></i>' }}</td>
                                 {% else %}
                                     <td>{{ values[column] }}</td>
                                 {% endif %}
