--- a/Resources/assets/scss/admin.scss
+++ b/Resources/assets/scss/admin.scss
@@ -553,6 +553,47 @@ img.avatar {
     }
 }
 
+table.compact-form {
+    background: #fafafa;
+
+    th {
+        font-size: 0.8em;
+        text-align: left;
+        padding: 0.4em 0.2em;
+    }
+
+    td {
+        &:first-child {
+            padding-left: 0.5em;
+        }
+
+        &:last-child {
+            padding-right: 0.2em;
+        }
+
+        background: #fefefe;
+        padding: 0.4em 0.2em;
+
+        &.text-center .button {
+            margin-top: 1em;
+        }
+    }
+
+    input, .chosen-container {
+        font-size: 0.9em;
+        margin-bottom: 0;
+        padding: 0.2em 0.4em;
+    }
+
+    .chosen-container {
+        padding: 0;
+
+        .chosen-container-single .chosen-single {
+            padding: 0.4;
+        }
+    }
+}
+
 //
 // .js-toggle
 //
