--- a/Resources/views/Admin/list.html.twig
+++ b/Resources/views/Admin/list.html.twig
@@ -103,7 +103,7 @@
                                 {% if values[column] is sameas(true) or values[column] is sameas(false) %}
                                     <td class="text-center">{{ values[column] ? '<i class="icon-ok color-success"></i>' : '<i class="icon-remove color-alert"></i>' }}</td>
                                 {% else %}
-                                    <td>{{ values[column] }}</td>
+                                    <td>{{ values[column]|raw }}</td>
                                 {% endif %}
                             {% endfor %}
                             <td class="text-right">
